<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>selenium-7624</artifactId>
  <version>0.1-SNAPSHOT</version>

  <properties>
    <application.url>http://localhost:8080</application.url>
    <selenium.grid.url>http://127.0.0.1:4444/wd/hub</selenium.grid.url>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>3.141.59</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.28</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <fork>true</fork>
          <meminitial>128m</meminitial>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>integration-tests</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <inherited>true</inherited>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
                <configuration>
                  <includes>
                    <include>ProjectSuiteFull.java</include>
                  </includes>
                  <skipTests>false</skipTests>
                  <argLine>-Xmx3g -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/dump.hprof</argLine>
                </configuration>
              </execution>
            </executions>
            <configuration>
              <parallel>all</parallel>
              <threadCount>8</threadCount> <!-- NB: this is per CPU core, unless perCoreThreadCount is false -->
              <!-- TODO WEBBPMNEXT-6376 tests hang for some reason when perCoreThreadCount is false -->
              <threadCountSuites>2</threadCountSuites>
              <threadCountClasses>3</threadCountClasses>
              <threadCountMethods>5</threadCountMethods>
              <systemPropertyVariables>
                <application.url>${application.url}</application.url>
                <selenium.grid.url>${selenium.grid.url}</selenium.grid.url>
              </systemPropertyVariables>
              <skipTests>false</skipTests>
            </configuration>
          </plugin>
        </plugins>
      </build>

      <reporting>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-report-plugin</artifactId>
            <version>2.18.1</version>
            <reportSets>
              <reportSet>
                <id>integration-tests</id>
                <reports>
                  <report>failsafe-report-only</report>
                </reports>
              </reportSet>
            </reportSets>
          </plugin>
        </plugins>
      </reporting>
    </profile>
  </profiles>

</project>
